# ContactListSeleniumPytestAutomation

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
config/: config.ini  config.toml
hooks/: pytest_hooks.py
logs/: 20250109_logs.txt  20250110_logs.txt  20250111_logs.txt  20250112_logs.txt  20250113_logs.txt  20250114_logs.txt  20250115_logs.txt  20250116_logs.txt  20250120_logs.txt  20250124_logs.txt  20250126_logs.txt  20250127_logs.txt  20250128_logs.txt  20250129_logs.txt
pages/: add_contact_page.py  base_page.py  delete_contact_page.py  edit_contact_page.py  home_page.py  login_page.py  signup_page.py
reports/allure_test_result/: 002d096a-e919-4238-9103-8cc87b6d7bca-result.json  00e58df0-6290-468a-9783-493a42a6b608-container.json  01c90034-8064-4cc6-ba08-158a10f77ec6-attachment.json  01d9dc74-4308-489f-938d-50a187766237-result.json  0219a90c-4c06-4f80-b510-c6e8d1afce5c-container.json  024e855d-a342-4f49-9648-35007979cbe3-container.json  0251774b-87c3-47ee-b2d8-ddb95d13cd45-container.json  0298cda5-c038-428d-bf02-810129dee57a-container.json  02c52c87-281e-46a1-ac60-817fb116b71f-container.json  02de1e63-c54a-427d-aebd-8a1b0dbf58cb-attachment.txt  0315c411-1b79-4ce9-8d8e-86ca097193d7-container.json  032dd135-9f3a-491e-a0a2-54e83b7894d5-attachment.json  0420062b-170d-4dd7-8e2e-85118a9dd9b1-result.json  04d5327d-d12f-4a46-8335-50d0103ccbd1-attachment.json  051d95b7-fb7a-4851-a71d-627abb940512-container.json  05dd1a99-8148-4874-90fd-d641ef6f0dc0-attachment.json  0635d8fc-5c8d-49f4-a063-69d3988bf547-attachment.json  0654cf28-7048-46be-9531-dbb11e335d6e-container.json  0736285d-6744-4692-9690-0b169c72422b-result.json  080edb58-7683-4cae-8e3a-a4d70e67da2a-attachment.json  08195509-1edb-4735-b630-52dab9028df7-attachment.txt  089f2c23-20e2-461e-b16f-2e10270c2fb7-attachment.txt  0ac04c7f-1143-43f9-901c-587db5f484d1-container.json  0ac69e1d-1a16-4eb8-a545-c51088f80d05-container.json  0af8c0f0-eece-4346-8997-89203d81a8c9-container.json  0b0f6a4e-f73d-4bd6-85c7-f99369d1148c-attachment.txt  0bb600a0-77ee-4051-958e-3ee4e4c52047-result.json  0bd1ed4a-ebb1-447a-9eca-374245138ea2-result.json  0c0c685c-3aa7-4fdd-97ad-fc8634c6df90-container.json  0cbf98f8-c763-4038-966a-f80f529ac1f1-container.json  0ccde4d9-7306-4a3b-af6d-d9a8e8ba6d47-container.json  0ce86e99-6542-4aee-a211-fd5b9580962e-container.json  0dcb1500-165f-46fe-aa83-1049ed2e4997-attachment.txt  0dff598e-3159-4c8a-9897-282a2a6aeb5f-result.json  0e498026-9449-4702-b9ab-49f0207330b7-result.json  0eda587e-2917-48bb-b72d-99731291c06a-container.json  0f02f42c-94d1-40e2-916d-40fafc0ea4e9-result.json  0fc44b02-3d65-40e1-9dec-6f023f22e0f9-result.json  102126ec-3612-4d7b-a7bd-51def5a08ec5-container.json  10386df6-eede-4949-91ca-5a3958c8bd5c-result.json  (+643 more)
test_data/: data_generator.py  test_data.json  user.json
tests/api/: test_add_contact_via_api.py  test_delete_contact_via_api.py  test_edit_contact_via_api.py  test_login_via_api.py  test_logout_via_api.py  test_signup_via_api.py
tests/reusable/: api_test_data_util.py  decorator_utils.py  http_util.py  reusable_scripts.py
tests/ui/: test_add_contact_via_ui.py  test_delete_contact_via_ui.py  test_edit_contact_via_ui.py  test_login_via_ui.py  test_logout_via_ui.py  test_signup_via_ui.py
util_documentation/: allure_util.md  config_util.md  element_assertion_util.md  element_keyboard_input_util.md  element_mouse_action_util.md  element_wait_until.md  http_util.md  json_data_util.md  log_util.md  reporter_util.md  screenshot_util.md  webdriver_manager_util.md
utils/: allure_util.py  api_assertion_util.py  config_util.py  decorator_utils.py  element_assertion_util.py  element_keyboard_input_util.py  element_mouse_action_util.py  element_wait_util.py  exception_message_util.py  http_util.py  imports_util.py  json_data_util.py  log_message_util.py  log_util.py  reporter_util.py  screenshot_util.py  webdriver_manager_util.py  wrapperUtil.py
