[project]
name = "contactlistappseleniumautomation"
version = "0.1.0"
description = "ContactList_UI_API_test"
authors = [
    {name = "Sandro Jimena sjimena@che2systems.com"}
]
license = {text = "TE"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "allure-pytest (>=2.13.5,<3.0.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2024.12.14)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "colorama (==0.4.6)",
    "crashtest (==0.4.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "faker (==33.3.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.16.1)",
    "idna (==3.10)",
    "iniconfig (==2.0.0)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "keyring (==25.6.0)",
    "more-itertools (==10.5.0)",
    "msgpack (==1.1.0)",
    "packaging (==24.2)",
    "pkginfo (==1.12.0)",
    "platformdirs (==4.3.6)",
    "pluggy (==1.5.0)",
    "poetry (==2.0.0)",
    "poetry-core (==2.0.0)",
    "pyproject-hooks (==1.2.0)",
    "pytest (==8.3.4)",
    "python-dateutil (==2.9.0.post0)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.11.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.1.7.14)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.28.1)",
    "pip (>=24.3.1,<24.4.0)",
    "attrs (>=24.3.0,<24.4.0)",
    "pysocks (>=1.7.1,<1.8.0)",
    "cffi (>=1.17.1,<1.18.0)",
    "allure-python-commons (>=2.13.5,<2.14.0)",
    "selenium (>=4.27.1,<4.28.0)",
    "webdriver-manager (>=4.0.2,<4.1.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "trio (>=0.28.0,<0.29.0)",
    "outcome (>=1.3.0.post0,<1.4.0)",
    "sniffio (>=1.3.1,<1.4.0)",
    "sortedcontainers (>=2.4.0,<2.5.0)",
    "trio-websocket (>=0.11.1,<0.12.0)",
    "websocket-client (>=1.8.0,<1.9.0)",
    "pycparser (>=2.22,<3.0)",
    "wsproto (>=1.2.0,<1.3.0)",
    "python-dotenv (>=1.0.1,<1.1.0)",
    "pytest-testrail (>=2.9.0,<2.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
