[tool.poetry]
name = "Contact_ListApp_Selenium_Automation"
version = "0.1.0"
description = "Contact List App Selenium Automation Framework"
authors = ["Sandro Jimena <sjimena@cheqsystems.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
selenium = "^4.27.1"
pytest = "^8.3.4"
pytest-tagging = "^1.0.1"
pytest-html = "^3.2.0"
webdriver-manager = "^4.0.0"
allure-pytest = "^2.13.5"
Faker = "^28.4.1"
pytest-testrail = "^2.9.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*.py"
addopts = "--alluredir=Reports/allure_test_result"
minversion = "6.0"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: mark test to run in a single-threaded manner",
    "tags: Custom mark for categorizing tests (e.g., 'ui', 'smoke', api, etc.')",
    "run(order): mark a test to run in a specific order",
    "testrail: mark a test as related to a specific Testrail case",
    "smoke: mark a test as part of the smoke suite",
    "regression: mark a test as part of the regression suite",
    "ui: mark a test as part of the UI tests",

]






[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"




